# First-Agentic-AI-Project

./: README.md  pyproject.toml
src/explore_uv/: main.py
